--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "styled-components": "^5.0.1",
-    "node-sass-chokidar": "^1.4.0"
+    "node-sass-chokidar": "^1.4.0",
+    "moment": "^2.24.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
